<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nvqquy98.moneyqq.presentation.ui.customview.layout.FormEntryApp
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_100"
            android:paddingHorizontal="@dimen/dp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/TextViewBold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/dodger_blue_approx"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26" />

            <com.nvqquy98.moneyqq.presentation.ui.customview.edittext.EdtCommonView
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_26"
                android:hint="@string/password"
                android:textColor="@color/mine_shaft"
                android:textColorHint="@color/french_gray_approx"
                app:ecv_focused_color="@color/dodger_blue_approx"
                app:ecv_ic_start="@drawable/ic_key"
                app:ecv_type_text="password"
                app:ecv_unfocused_color="@color/french_gray_approx"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.nvqquy98.moneyqq.presentation.ui.customview.edittext.EdtCommonView
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_26"
                android:hint="@string/confirm_password"
                android:textColor="@color/mine_shaft"
                android:textColorHint="@color/french_gray_approx"
                app:ecv_focused_color="@color/dodger_blue_approx"
                app:ecv_ic_start="@drawable/ic_key"
                app:ecv_type_text="password"
                app:ecv_unfocused_color="@color/french_gray_approx"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/description_format_password"
                android:textColor="@color/mine_shaft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_confirm_password" />

        </com.nvqquy98.moneyqq.presentation.ui.customview.layout.FormEntryApp>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_login"
            android:layout_width="@dimen/dp_52"
            android:layout_height="@dimen/dp_52"
            android:layout_marginBottom="@dimen/dp_80"
            android:background="@null"
            android:src="@drawable/ic_btn_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
